# MemNoX

./: .gitignore
api/: config.py  main.py  pyproject.toml
api/agents/: __init__.py  chief_of_staff.py
api/models/: __init__.py  schemas.py
api/services/: __init__.py  ingestion.py  retrieval.py  shadow_librarian.py
api/tools/: __init__.py  base.py  calendar.py  database.py  email.py  github.py
backend/: manage.py  pyproject.toml
backend/memnox/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json
